# Better-BLDC-Motor-Controller

./: CMakeLists.txt  README.md
src/cpp/: MCT8316.cpp  Main.cpp  TCAN330.cpp
src/include/: MCT8316.h  TCAN330.h
