cmake_minimum_required(VERSION 3.13)
set(PICO_SDK_PATH "~/Builds/pico-sdk")
include(pico_sdk_import.cmake)
project(my_project)
pico_sdk_init()
file(GLOB motorcontrol_SRC CONFIGURE_DEPENDS "*.h" "*.cpp")
add_executable(motorcontrol)
target_sources(motorcontrol PRIVATE ${motorcontrol_SRC})
target_link_libraries(motorcontrol PRIVATE pico_stdlib hardware_pio)
pico_add_extra_outputs(motorcontrol)